--- a/src/css/dashboard/Dashboard.module.css
+++ b/src/css/dashboard/Dashboard.module.css
@@ -3,6 +3,7 @@
   display: flex;
   width: 100%;
   background-color: #f0f2f5;
+
 }
 
 .navBar {
@@ -99,6 +100,7 @@
 .refreshButton {
   padding: 0.8rem 1.5rem;
   background: #36cfc9;
+  background-image: linear-gradient(to bottom right,#a5fff9,#14ada8);
   color: white;
   border: none;
   border-radius: 8px;
