--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import "tw-animate-css";
-@import "tailwindcss";
-@import "./typography.css";
+@import 'tw-animate-css';
+@import 'tailwindcss';
+@import './typography.css';
 
 @theme {
-  --font-display: "Satoshi", sans-serif;
+  --font-display: 'Satoshi', sans-serif;
   --breakpoint-3xl: 1920px;
   --color-avocado-100: oklch(0.99 0 0);
   --color-avocado-200: oklch(0.98 0.04 113.22);
